etc/openshift/rng-deploy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rng
spec
  selector: 
    matchLabels:
      app: rng
  template:
    metadata:
      labels: 
        app: rng
    spec:
      containers: 
        -
          image: openshiftacademiaonline/dockercoins-ops:rng-latest
          name: python
          ports: 
            -
              containerPort: 8080
