etc/openshift/rng-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: rng
spec:
  ingress:
    -
      from:
        -
          podselector:
            matchLabels:
              app: worker
      ports:
        -
          port: 8080
  podSelector:
    matchLabels:
      app: rng
