etc/openshift/worker-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: worker
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Ingress
